--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,10 @@ environment:
   sdk: '>=2.15.1 <3.0.0'
 
 dependencies:
+  archive: ^3.1.8
   flutter:
     sdk: flutter
+  path: ^1.8.0
   path_provider: ^2.0.8
 
 dev_dependencies:
