--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   archive: ^3.1.8
   flutter:
     sdk: flutter
+  flutter_cache_manager: ^3.3.0
   path: ^1.8.0
   path_provider: ^2.0.8
 
