--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -7,8 +7,8 @@ version: 0.2.0+200
 publish_to: none
 
 environment:
-  flutter: '>=2.10.0 <3.0.0'
-  sdk: '>=2.17.0 <3.0.0'
+  flutter: ">=2.10.0 <3.0.0"
+  sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
   cross_file_manager:
