--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -2,13 +2,13 @@ name: example_cross_file_manager
 description: An example for CrossFileManager.
 homepage: https://github.com/signmotion/cross_file_manager
 
-version: 0.3.0
+version: 0.4.1
 
 publish_to: none
 
 environment:
   flutter: ">=3.10.6"
-  sdk: ">=3.0.6"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   cross_file_manager:
