--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -12,7 +12,7 @@ version: 0.4.2
 publish_to: none
 
 environment:
-  flutter: ">=3.10.6"
+  flutter: ">=3.0.0 <4.0.0"
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
