Removed caps for Flutter SDK.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ topics:
 version: 0.4.3
 
 environment:
-  flutter: ">=3.0.0 <4.0.0"
+  flutter: ">=3.0.0"
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
