--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: cross_file_manager
-description: Transparent reading of files from assets, Internet (by URL), zip archives by uploader priority.
+description: >-
+  Transparent reading of files from assets, Internet (by URL), zip archives by uploader priority.
 repository: https://github.com/signmotion/cross_file_manager
-
 topics:
   - files
   - cache
@@ -26,7 +26,7 @@ dependencies:
     sdk: flutter
   flutter_cache_manager: ^3.3.0
   #flutter_cache_manager_firebase: ^2.0.1
-  path: ">=1.8.0 <2.0.0"
+  path: ">=1.8.0 <3.0.0"
   path_provider: ^2.1.2
   stash: ^5.0.3
   stash_memory: ^5.0.3
