Added a description for version.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ topics:
   - assets
   - archive
 
+# Compatible with https://semver.org
 # Format:
 #   version: major.minor.patch
 # You can calculate the number version code by this formula:
